--- a/Views/Career/CreateCareer.cshtml
+++ b/Views/Career/CreateCareer.cshtml
@@ -1,48 +1,139 @@
 ﻿@model BiodataTest.ViewModels.CareerViewModel
 
-@{
-    ViewData["Title"] = "CreateCareer";
-}
-
-<h1>CreateCareer</h1>
-
-<h4>CareerViewModel</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="panel panel-default">
+    <div class="panel-body">
         <form asp-action="CreateCareer" asp-controller="Career" method="post" role="form" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CareerName" class="control-label"></label>
-                <input asp-for="CareerName" class="form-control" />
-                <span asp-validation-for="CareerName" class="text-danger"></span>
+
+            <div class="panel panel-primary">
+                <div class="panel-heading">Career</div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label asp-for="CategoryID" class="control-label"></label>
+                                <select asp-for="CategoryID" class="form-control" asp-items="@(new SelectList(@ViewBag.listofCategory,"CategoryID","CategoryName"))">
+                                </select>
+                                <span asp-validation-for="CategoryID" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+
+                            <div class="form-group">
+                                <label asp-for="CareerName" class="control-label"></label>
+                                <input asp-for="CareerName" class="form-control" />
+                                <span asp-validation-for="CareerName" class="text-danger"></span>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-4">
+
+                            <div class="form-group">
+                                <label asp-for="CareerDesc" class="control-label"></label>
+                                <textarea asp-for="CareerDesc" class="form-control"></textarea>
+                                <span asp-validation-for="CareerDesc" class="text-danger"></span>
+                            </div>
+
+                        </div>
+                    </div>
+
+                    <div class="row">
+
+
+                    </div>
+
+                    <div class="row">
+
+                        <div class="col-md-4">
+
+                            <div class="form-group form-check">
+                                <label class="form-check-label">
+                                    <input class="form-check-input" asp-for="isActive" /> @Html.DisplayNameFor(model => model.isActive)
+                                </label>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="CareerDesc" class="control-label"></label>
-                <textarea asp-for="CareerDesc" class="form-control" ></textarea>
-                <span asp-validation-for="CareerDesc" class="text-danger"></span>
+            <div class="col-md-4">
+
+                <div class="form-group">
+                    <label asp-for="CareerImgfile" class="control-label"></label>
+                    <input asp-for="CareerImgfile" class="form-control" type="file" />
+                    <span asp-validation-for="CareerImgfile" class="text-danger"></span>
+                </div>
+
             </div>
-            <div class="form-group">
-                <label asp-for="CategoryID" class="control-label"></label>
-                <select asp-for="CategoryID" class="form-control" asp-items="@(new SelectList(@ViewBag.listofCategory,"CategoryID","CategoryName"))">
-                </select>
-                <span asp-validation-for="CategoryID" class="text-danger"></span>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+
             </div>
-           
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="isActive" /> @Html.DisplayNameFor(model => model.isActive)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="CareerImgfile" class="control-label"></label>
-                <input asp-for="CareerImgfile" class="form-control" type="file" />
-                <span asp-validation-for="CareerImgfile" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
+            
         </form>
+    </div>
+</div>
+
+<div class="container-fluid">
+
+    <div class="panel panel-success">
+        <div class="panel-heading">Existing Careers</div>
+        <div class="panel-body">
+            <div class="row">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.CareerName)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.CareerDesc)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.CategoryName)
+                            </th>
+                            @*<th>
+                                @Html.DisplayNameFor(model => model.CareerName)
+                            </th>*@
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.AllCareers)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CareerName)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CareerDesc)
+                                </td>
+
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.CategoryName)
+                                </td>
+                                @*<td>
+                                    @Html.DisplayFor(modelItem => item.CareerName)
+                                </td>*@
+                                <td>
+                                    <a asp-action="Edit" asp-route-id="@item.CareerID">Edit</a> |
+                                    <a asp-action="Details" asp-route-id="@item.CareerID">Details</a> |
+                                    <a asp-action="Delete" asp-route-id="@item.CareerID">Delete</a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
 
