Table adjustment and SPA for Skills, Category

--- a/Views/Career/Application.cshtml
+++ b/Views/Career/Application.cshtml
@@ -76,7 +76,7 @@
                                 <input type="submit" value="Apply" class="btn btn-primary" />
                                 @*<span asp-validation-for="skillId" class="text-danger"></span>*@
                             </div>
-                            
+
 
                         </div>
                         <div class="col-md-4">
@@ -91,13 +91,13 @@
                     </div>
 
                 </div>
-                </div>  
-    </form>
+            </div>
+        </form>
 
-</div>
+    </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
+< <div>
+    <a asp-action="existedCareers" asp-controller="Career">Back to List</a>
 </div>
 
