--- a/Views/Category/CreateCategory.cshtml
+++ b/Views/Category/CreateCategory.cshtml
@@ -2,9 +2,16 @@
 
 
 <div class="panel panel-default">
+    @*<style>
+        .table td, .table th {
+            font-size: 12px !important;
+        }
+
+    </style>*@
     <div class="panel-body">
-        <form asp-action="CreateCategory">
+        <form asp-action="CreateCategory" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="CategoryID" />
             <div class="panel panel-primary">
                 <div class="panel-heading">Career category</div>
                 <div class="panel-body">
@@ -31,9 +38,20 @@
 
                         </div>
                     </div>
-                    <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-primary" />
-                    </div>
+                    @if (ViewData["EditedCategory"] != null)
+                    {
+                        <div class="form-group">
+                            <input type="submit" value="Edit" formaction="EditCategory" class="btn btn-primary" />
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="form-group">
+                            <input type="submit" value="Create" formaction="CreateCategory" class="btn btn-primary" />
+                        </div>
+                    }
+
+
                 </div>
             </div>
 
@@ -42,47 +60,52 @@
 </div>
 
 
-<div class="container-fluid">
+@if (Model.AllCategories != null)
+{
 
-    <div class="panel panel-success">
-        <div class="panel-heading">Existing Data</div>
-        <div class="panel-body">
-            <div class="row">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>
-                                @Html.DisplayNameFor(model => model.CategoryName)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.CategoryCode)
-                            </th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.AllCategories)
-                        {
+
+    <div class="container-fluid">
+
+        <div class="panel panel-success">
+            <div class="panel-heading">Existing Data</div>
+            <div class="panel-body">
+                <div class="row">
+                    <table class="table-bordered">
+                        <thead class="table th">
                             <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CategoryName)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.CategoryCode)
-                                </td>
-                                <td>
-                                    <a asp-action="Edit" asp-route-id="@item.CategoryID">Edit</a> |
-                                    <a asp-action="Details" asp-route-id="@item.CategoryID">Details</a> |
-                                    <a asp-action="Delete" asp-route-id="@item.CategoryID">Delete</a>
-                                </td>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.CategoryName)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.CategoryCode)
+                                </th>
+                                <th>Actions</th>
                             </tr>
-                        }
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody class=" table td">
+                            @foreach (var item in Model.AllCategories)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.CategoryName)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.CategoryCode)
+                                    </td>
+                                    <td>
+                                        <a asp-action="Edit" asp-route-id="@item.CategoryID">Edit</a> |
+                                        <a asp-action="Details" asp-route-id="@item.CategoryID">Details</a> |
+                                        <a asp-action="Delete" asp-route-id="@item.CategoryID">Delete</a>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
 
 <div>
     <a asp-action="Index">Back to List</a>
