--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="~/assets/css/argon.mine209.css?v=1.0.0" type="text/css">
     <link rel="stylesheet" href="~/css/loading.css">
     <link href="~/sweetAlert/sweetalert.css" rel="stylesheet" />
-    <link href="~/css/site.css" rel="stylesheet" />
+    <link href="~/css/site.css" rel="stylesheet"  type="text/css" />
     <script src="~/sweetAlert/sweetalert.min.js"></script>
 
     <script src="~/lib/jquery/jquery.js"></script>
@@ -62,14 +62,14 @@
         <div class="scrollbar-inner">
             <!-- Brand -->
             <div class="sidenav-header d-flex align-items-center" style="background-color:cadetblue; height:80px">
-                <a class="navbar-brand" asp-controller="Home" asp-action="Index">
+                <a class="navbar-brand" asp-controller="Career" asp-action="existedCareers">
                     @*<img src="~/assets/img/brand/blue.png" class="navbar-brand-img" alt="...">*@
                     <img src="~/PersonalImages/PayrollImg.png" class="navbar-brand-img" alt="..." />
                     @*<span class="nav-link-text">Biodata Mgt</span>*@
                 </a>
                 <div class="ml-auto">
                     <!-- Sidenav toggler -->
-                    <div class="sidenav-toggler d-none d-xl-block" data-action="sidenav-unpin" data-target="#sidenav-main">
+                    <div class="sidenav-toggler d-none d-xl-block active" data-action="sidenav-pin" data-target="#sidenav-main">
                         <div class="sidenav-toggler-inner">
                             <i class="sidenav-toggler-line"></i>
                             <i class="sidenav-toggler-line"></i>
@@ -87,12 +87,12 @@
                 <div class="collapse navbar-collapse" id="sidenav-collapse-main">
                     <!-- Nav items -->
                     <ul class="navbar-nav">
-                        @*<li class="nav-item">
-                                <a asp-controller="Home" asp-action="Index" class="nav-link active" role="button" aria-expanded="true" aria-controls="navbar-dashboards">
+                        <li class="nav-item">
+                                <a asp-controller="Career" asp-action="existedCareers" class="nav-link active" role="button" aria-expanded="true" aria-controls="navbar-dashboards">
                                     <i class="ni ni-shop text-primary"></i>
                                     <span class="nav-link-text">Home</span>
                                 </a>
-                            </li>*@
+                            </li>
                         @*@if (HttpContextAccessor.HttpContext.User.FindFirst("ApplicationRole").Value.Contains("Administrator"))
                             {
                                 <li class="nav-item">
@@ -314,48 +314,67 @@
                 @*<img src="~/PersonalImages/Payrolltoplogolong.png" class="navbar-brand-img" alt="..." />*@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     @*<img src="~/PersonalImages/Payrolltoplogolong.png" class="navbar-brand-img" alt="..." />*@
-                    <h1 class="text-white">Testing Sol</h1>
-                    <!-- Navbar links -->
-                    <ul class="navbar-nav align-items-center ml-md-auto">
-                        <li class="nav-item d-xl-none">
-                            <!-- Sidenav toggler -->
-                            <div class="pr-3 sidenav-toggler sidenav-toggler-dark" data-action="sidenav-pin" data-target="#sidenav-main">
-                                <div class="sidenav-toggler-inner">
-                                    <i class="sidenav-toggler-line"></i>
-                                    <i class="sidenav-toggler-line"></i>
-                                    <i class="sidenav-toggler-line"></i>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="nav-item d-sm-none">
-                            <a class="nav-link" href="#" data-action="search-show" data-target="#navbar-search-main">
-                                <i class="ni ni-zoom-split-in"></i>
-                            </a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav align-items-center ml-auto ml-md-0">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <div class="media align-items-center">
-                                    <span><i class="ni ni-single-02"></i></span>
-                                    <div class="media-body ml-2 d-none d-lg-block">
-                                        <span class="mb-0 text-sm  font-weight-bold">@User.Identity.Name</span>
-                                    </div>
-                                </div>
-                            </a>
-                            @*<a>*@
-                                <div class="dropdown-menu dropdown-menu-right">
 
-                                    <form asp-area="" asp-controller="Account" asp-action="Logout" method="post">
-                                        <button type="submit" class="dropdown-item">
-                                            <i class="ni ni-user-run"></i>
-                                            <span>Logout</span>
-                                        </button>
-                                    </form>
-                                </div>
-                            @*</a>*@
-                        </li>
-                    </ul>
+                    <div class="row">
+
+                        <div class="col-md-10"><h1 class="text-white">Testing Sol</h1></div>
+
+                        <div class="col-md-2">
+
+                            <ul class="navbar-nav align-items-center ml-md-auto">
+                                <li class="nav-item d-xl-none">
+                                    <!-- Sidenav toggler -->
+                                    <div class="pr-3 sidenav-toggler sidenav-toggler-dark" data-action="sidenav-pin" data-target="#sidenav-main">
+                                        <div class="sidenav-toggler-inner">
+                                            <i class="sidenav-toggler-line"></i>
+                                            <i class="sidenav-toggler-line"></i>
+                                            <i class="sidenav-toggler-line"></i>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="nav-item d-sm-none">
+                                    <a class="nav-link" href="#" data-action="search-show" data-target="#navbar-search-main">
+                                        <i class="ni ni-zoom-split-in"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="navbar-nav align-items-center ml-auto ml-md-0">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <div class="media align-items-center">
+                                            <span><i class="ni ni-single-02"></i></span>
+                                            <div class="media-body ml-2 d-none d-lg-block">
+                                                <span class="mb-0 text-sm  font-weight-bold">@User.Identity.Name</span>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    @*<a>*@
+                                    <div class="dropdown-menu dropdown-menu-right">
+
+                                        <form asp-area="" asp-controller="Account" asp-action="Logout" method="post">
+                                            <button type="submit" class="dropdown-item">
+                                                <i class="ni ni-user-run"></i>
+                                                <span>Logout</span>
+                                            </button>
+                                        </form>
+                                    </div>
+                                    @*</a>*@
+                                </li>
+                            </ul>
+
+
+
+
+                        </div>
+
+                        
+
+                      
+                    </div>
+
+                    
+                    <!-- Navbar links -->
+                
                 </div>
             </div>
         </nav>
