--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IAuthorizationService AuthorizationService
 @inject UserManager<ApplicationUser> UserManager
-@*@inject IHttpContextAccessor HttpContextAccessor*@
+@inject IHttpContextAccessor HttpContextAccessor
 
 
 <!DOCTYPE html>
@@ -145,52 +145,54 @@
                                     </div>
                                 </li>
                             }*@
-                        <li class="nav-item">
-                            <a class="nav-link" href="#requisition" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="requisition">
-                                <i class="ni ni-books text-blue"></i>
-                                <span class="nav-link-text">Bio Data</span>
-                            </a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#requisition" data-toggle="collapse" role="button" aria-expanded="false" aria-controls="requisition">
+                            <i class="ni ni-books text-blue"></i>
+                            <span class="nav-link-text">Bio Data</span>
+                        </a>
 
-                            @*<li><a asp-controller="Contact" asp-action="Index">Contact</a></li>*@
-                            @if (SignInManager.IsSignedIn(User))// && User.IsInRole("Administrator"))
-                            {
-                                // @await Component.InvokeAsync("AdminMenu")
+                        @*<li><a asp-controller="Contact" asp-action="Index">Contact</a></li>*@
 
-
-                                <div class="collapse" id="requisition">
-                                    <ul class="nav nav-sm flex-column">
-                                        <li class="nav-item">
-                                            <a asp-controller="BioData" asp-action="existedBiodata" class="nav-link">List</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a asp-controller="BioData" asp-action="CreateBioData" class="nav-link">New Biodata</a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a asp-controller="Account" asp-action="RegisterUser" class="nav-link">Register New User</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a asp-controller="BioData" asp-action="approvedstaffCatalog" class="nav-link">Add to Catlog</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a asp-controller="Account" asp-action="getAllUsers" class="nav-link">View Users</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a asp-controller="Account" asp-action="Login" class="nav-link">Login</a>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a asp-controller="Account" asp-action="Logout" class="nav-link">Logout</a>
-                                        </li>
-                                        @*<li class="nav-item">
-            <a class="nav-link text-dark" asp-action="Logout1"  asp-page="/Account/Logout1">Logout2</a>
-        </li>*@
-
-                                    </ul>
-                                </div>
-                            }
+                        @*@if (HttpContextAccessor.HttpContext.User.FindFirst("ApplicationRole").Value.Contains("Admin"))*@
+                        @if (SignInManager.IsSignedIn(User))// && User.IsInRole("Admin"))
+                        {
+                            // @await Component.InvokeAsync("AdminMenu")
 
 
-                        </li>
+                            <div class="collapse" id="requisition">
+                                <ul class="nav nav-sm flex-column">
+                                    <li class="nav-item">
+                                        <a asp-controller="BioData" asp-action="existedBiodata" class="nav-link">List</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a asp-controller="BioData" asp-action="CreateBioData" class="nav-link">New Biodata</a>
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a asp-controller="Account" asp-action="RegisterUser" class="nav-link">Register New User</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a asp-controller="BioData" asp-action="approvedstaffCatalog" class="nav-link">Add to Catlog</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a asp-controller="Account" asp-action="getAllUsers" class="nav-link">View Users</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a asp-controller="Account" asp-action="Login" class="nav-link">Login</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a asp-controller="Account" asp-action="Logout" class="nav-link">Logout</a>
+                                    </li>
+                                    @*<li class="nav-item">
+                        <a class="nav-link text-dark" asp-action="Logout1"  asp-page="/Account/Logout1">Logout2</a>
+                    </li>*@
+
+                                </ul>
+                            </div>
+                        }
+
+
+                    </li>
                         <!--Second menu left side bar-->
 
                         <li class="nav-item">
@@ -200,7 +202,7 @@
                             </a>
 
                             @*<li><a asp-controller="Contact" asp-action="Index">Contact</a></li>*@
-                            @if (SignInManager.IsSignedIn(User))// && User.IsInRole("Administrator"))
+                            @if (SignInManager.IsSignedIn(User))// && User.IsInRole("Admin"))
                             {
                                 // @await Component.InvokeAsync("AdminMenu")
 
@@ -243,6 +245,9 @@
                                         </li>
                                         <li class="nav-item">
                                             <a asp-controller="YearsExperienceCost" asp-action="CreateCost" class="nav-link">Setup Cost</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a asp-controller="Career" asp-action="MyCart" class="nav-link">My Cart</a>
                                         </li>
                                     </ul>
                                 </div>
